# SJTU-CS7332-local_illumination_model

./: 2b.cpp  2bb.cpp  App  Application.cpp  CMakeLists.txt  README.md  temp.cpp  test.cpp
include/: FrameBuffer.h  IndexBuffer.h  Lights.h  Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  tiny_obj_loader.h
include/GL/: glew.h  glxew.h  wglew.h
include/glm/ext/: _matrix_vectorize.hpp  matrix_clip_space.hpp  matrix_clip_space.inl  matrix_common.hpp  matrix_common.inl  matrix_float3x2.hpp  matrix_relational.inl  matrix_transform.hpp  matrix_transform.inl  matrix_uint2x3.hpp  matrix_uint3x2.hpp  quaternion_common.hpp  quaternion_common.inl  scalar_common.hpp  scalar_common.inl  scalar_constants.inl  scalar_integer.inl  scalar_reciprocal.hpp  scalar_reciprocal.inl  scalar_relational.hpp  scalar_ulp.hpp  scalar_ulp.inl  vector_common.hpp  vector_common.inl  vector_integer.inl  vector_ulp.hpp  vector_ulp.inl
include/glm/glm/gtx/: wrap.hpp
include/glm/gtc/: integer.hpp
include/glm/gtx/: texture.hpp
lib/: libGLEW.2.2.dylib
res/: lightsPos.pos
res/objects/: scene.txt
res/shaders/: basic.shader  depth_fragment.glsl  fragment.glsl  vertex.glsl
src/: FrameBuffer.cpp  IndexBuffer.cpp  Lights.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  main.cpp  utils.cpp
